Version 0.6 (beta) - ???

* Removed unnecessary generated script for opening a window, because 
  nullArgs does it automatically if a <LINK> is supplied.
* Fixed crash when an OPTION tag with no value and no text is encountered.

Version 0.5 (beta) - 21-Aug-2002

* Added support for documents with frames
* Minor cleanup

Version 0.4 (beta) - 12-Aug-2002

* Form element names with weird characters ([^_a-zA-Z]) are now referenced correctly.
* Escape characters < > & in user text and HTML text
* Restrict search name to lowercase and valid filename characters
* Minor UI changes - about box, icon, etc.
* Fix XML and script generated for radio buttons, checkboxes, TEXTAREAs
* URL truncation bug fix
* Options for including comments and warning about active element
* Bug fix for display of change log in About dialog
* Bug fix for extra '/'s in FORM action attribute

Version 0.3 (beta) - 08-Aug-2002

* Allow creation of empty search
* Detect active field and use it as default search field


Copyright (c) 2002 Glenn Carr; Distributed under the terms of the GNU General Public License, Version 2