@@ -347,10 +347,6 @@ LRESULT CDQSDWizardDlg::OnOK(WORD wNotifyCode, WORD wID, HWND hWndCtl, BOOL& bHa
 		{
 			strSearchFile += _T("\r\n  <COMMENT>"
 								"\r\n"
-								"\r\n    This search file was initially created by on ") + string( szDate ) + _T(" at ") + string( szTime ) + 
-							 _T("\r\n    Dave's Quick Search Deskbar Search Wizard version ") + m_strVersion + _T(","
-								"\r\n    ") + m_strCopyright;
-			strSearchFile += _T("\r\n"
 								"\r\n    Even though this XML search will probably load and is a healthy start"
 								"\r\n    toward a completed search, please be aware that this search will probably"
 								"\r\n    not work as is and will require some human tweaks."
@@ -406,8 +402,13 @@ LRESULT CDQSDWizardDlg::OnOK(WORD wNotifyCode, WORD wID, HWND hWndCtl, BOOL& bHa
 
 		strSearchFile += _T("\r\n  <copyright>"
 							"\r\n    The following applies if this file is included and distributed with Dave's Quick Search Deskbar:"
-							"\r\n    Copyright (c) 2002 David Bau, Distributed under the terms of the GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)"
+							"\r\n    Copyright (c) 2002 David Bau; Distributed under the terms of the GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)"
 							"\r\n  </copyright>"
+							"\r\n  <created_by>"
+							"\r\n    This search file was initially created by on ") + string( szDate ) + _T(" at ") + string( szTime ) + 
+						 _T("\r\n    Dave's Quick Search Deskbar Search Wizard version ") + m_strVersion + _T(","
+							"\r\n    ") + m_strCopyright +
+						 _T("\r\n  </created_by>"
 							"\r\n</search>");
 
 		TCHAR szFile[ MAX_PATH + 1 ];
